# ollama-oxide

./: .env  Cargo.toml  Containerfile.dev  README.md  compose.dev.yaml
src/: error.rs  lib.rs  models.rs
