[package]
name = "ollama-oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
